fix: final tune for mobile hero glow alignment

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -298,13 +298,13 @@
 
   .bgGlow {
     top: 50%;
-    left: 60%;
+    left: 50%;
     width: 52%;
   }
 
   .bgPulse {
     top: 50%;
-    left: 60%;
+    left: 50%;
     width: 30%;
   }
 }
